<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_fill_16_rect"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_rhythm_save_title"
            style="@style/TextAppearance.Stempo.Head3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:lineSpacingMultiplier="1.3"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/rhythm_stop_tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_save"
            style="@style/TextAppearance.Stempo.Head4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/shape_purple10_fill_12_rect"
            android:gravity="center"
            android:paddingHorizontal="36dp"
            android:paddingVertical="15dp"
            android:text="@string/rhythm_stop_btn_save"
            android:textColor="@color/purple_50"
            app:layout_constraintEnd_toStartOf="@id/btn_pause"
            app:layout_constraintStart_toStartOf="@id/tv_rhythm_save_title"
            app:layout_constraintTop_toBottomOf="@id/tv_rhythm_save_title" />

        <TextView
            android:id="@+id/btn_pause"
            style="@style/TextAppearance.Stempo.Head4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_purple50_fill_12_rect"
            android:gravity="center"
            android:paddingHorizontal="36dp"
            android:paddingVertical="15dp"
            android:text="@string/rhythm_stop_btn_pause"
            android:textColor="@color/purple_10"
            app:layout_constraintEnd_toEndOf="@id/tv_rhythm_save_title"
            app:layout_constraintStart_toEndOf="@id/btn_save"
            app:layout_constraintTop_toBottomOf="@id/tv_rhythm_save_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>