<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100">

        <ImageView
            android:id="@+id/iv_profile_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_logo_purple"
            app:layout_constraintBottom_toBottomOf="@id/tv_profile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_profile_title" />

        <TextView
            android:id="@+id/tv_profile_title"
            style="@style/TextAppearance.Stempo.Head2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_tv_title"
            app:layout_constraintStart_toEndOf="@id/iv_profile_logo"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layout_profile_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_white_fill_gray200_line_8_rect"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_announce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_btn_announce"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_btn_faq"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_profile_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_white_fill_gray200_line_8_rect"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_profile_web">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_btn_voice"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_btn_suggest"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_profile_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/shape_white_fill_gray200_line_8_rect"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_profile_report">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/tv_version_title"
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="버전 정보"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_version_code"
                    style="@style/TextAppearance.Stempo.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="v 1.0.0"
                    android:textColor="@color/gray_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextAppearance.Stempo.Head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_btn_withdraw"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_next_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>