<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_report_month"
            style="@style/TextAppearance.Stempo.Head1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:text="3개월"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_report_title"
            style="@style/TextAppearance.Stempo.Head1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="-5dp"
            android:text="@string/report_tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_report_month" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_gray300_dash_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chart_report" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_gray300_dash_line"
            app:layout_constraintBottom_toBottomOf="@id/chart_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chart_report" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_gray300_dash_line"
            app:layout_constraintBottom_toBottomOf="@id/chart_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_report"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_report_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_report_achieve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_report">

            <TextView
                android:id="@+id/tv_report_achieve_title"
                style="@style/TextAppearance.Stempo.Head3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/report_tv_achieve_title"
                app:layout_constraintBottom_toBottomOf="@id/btn_achievement_full"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/btn_achievement_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:background="@drawable/shape_purple50_line_17_rect"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextAppearance.Stempo.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_btn_achieve_full"
                    android:textColor="@color/purple_50" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:src="@drawable/ic_next_purple" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="134dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_gray100_fill_8_rect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_achievement_full" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>